# carcasonne-like-game

./: .gitignore  README.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/Lobby/: Lobby.css  Lobby.js  LobbyChat.css  LobbyChat.js  LobbyGames.css  LobbyGames.js  LobbyStats.css  LobbyStats.js
frontend/src/components/Login/: Login.css  Login.js  LoginForm.css  LoginForm.js  LoginFormEntry.css  LoginFormEntry.js
frontend/src/components/WebSocketHandler/: WebSocketHandler.js
server/: .gitignore  CMakeLists.txt  VC++.sln  VC++.vcxproj  VC++.vcxproj.filters  main.cpp  resource.h  server.cbp  test.html  tests
server/Test/: Test.vcxproj
server/src/: main.cpp  sample.cc  sample.h  sample_unittest.cc
server/src/game/: game.cpp  game.h  gameMap.cpp  gameMap.h  player.cpp  player.h  userDatabase.cpp  userDatabase.h
server/src/uWS/: Group.cpp
